# secure_task

./: Cargo.toml  test.db
src/: config.rs  database.rs  lib.rs  main.rs  router.rs
tests/: health.rs
